--- a/backend/menu-api/app/package.json
+++ b/backend/menu-api/app/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.1.2",
-    "common": "file:../../common/app/",
+    "common": "https://gitpkg.now.sh/PetitChampi/instant-bacchus/backend/common/app?main",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/node": "^18.11.9",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
