--- a/infra/local/docker-compose.yml
+++ b/infra/local/docker-compose.yml
@@ -1,25 +1,26 @@
 services:
   menu-api-postgres:
+    container_name: menu-api-postgres
     image: postgres:14.1-alpine
     restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
-      - '5432:5432'
+      - '5500:5432'
     volumes:
       - db:/var/lib/postgresql/data
 
-  # menu-api:
-  #   container_name: menu-api
-  #   build: 
-  #     context: ../../backend/menu-api/app
-  #     dockerfile: Dockerfile
-  #   image: menu-api
-  #   depends_on:
-  #     - menu-api-postgres
-  #   ports:
-  #     - 3000:3000
+  menu-api:
+    container_name: menu-api
+    build: 
+      context: ../../backend/menu-api/app
+      dockerfile: Dockerfile
+    image: menu-api
+    depends_on:
+      - menu-api-postgres
+    ports:
+      - '4000:3000'
 
 volumes:
   db:
