--- a/backend/common/app/package.json
+++ b/backend/common/app/package.json
@@ -2,14 +2,25 @@
   "name": "common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
+    "build": "tsc && tsc-alias",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "tsc-alias": "^1.7.0",
+    "typescript": "^4.8.4",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@types/uuid": "^8.3.4"
   }
 }
