--- a/backend/common/app/tsconfig.json
+++ b/backend/common/app/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "target": "ES6",
     "outDir": "./lib",
-    "strict": true,
+    "strict": false,
     "declaration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
