--- a/backend/common/app/package.json
+++ b/backend/common/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/uuid": "^8.3.4"
+  },
+  "publishConfig": {
+    "registry": "http://npm-registry.local:4873"
   }
 }
