--- a/backend/menu-api/app/package.json
+++ b/backend/menu-api/app/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.1.2",
-    "common": "https://gitpkg.now.sh/PetitChampi/instant-bacchus/backend/common/app?main",
+    "common": "^1.0.6",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
