--- a/backend/menu-api/app/tsconfig.json
+++ b/backend/menu-api/app/tsconfig.json
@@ -11,6 +11,7 @@
     "declaration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
+    "module": "commonjs",
     "paths": {
       "@/src/*": [
         "src/*"
