--- a/backend/menu-api/app/package.json
+++ b/backend/menu-api/app/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "chalk": "^5.1.2",
-    "common": "^1.0.6",
+    "common": "^1.0.7",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
+    "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
