--- a/backend/menu-api/app/package.json
+++ b/backend/menu-api/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon --signal SIGINT src/index.ts",
+    "serve": "env $(cat .env | xargs) nodemon --signal SIGINT --files -r tsconfig-paths/register src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "chalk": "^5.1.2",
-    "common": "^1.0.7",
+    "common": "^1.0.8",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
 }
